added a error page

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -45,8 +45,8 @@
                     <div class="links2">
                         <a href="../index.html">Home</a>
                         <a href="/listings/all-listings.html">Listings</a>
-                        <a href="">About us</a>
-                        <a href="">Contact us</a>
+                        <a href="/error.html">About us</a>
+                        <a href="/error.html">Contact us</a>
                     </div>
 
                 </div>
@@ -56,9 +56,9 @@
                     <div class="nav-dot"></div>
                     <a href="/listings/all-listings.html">Listings</a>
                     <div class="nav-dot"></div>
-                    <a href="">About us</a>
+                    <a href="/error.html">About us</a>
                     <div class="nav-dot"></div>
-                    <a href="">Contact us</a>
+                    <a href="/error.html">Contact us</a>
                 </div>
 
                 <div class="user-options">
@@ -207,7 +207,7 @@
             <p>Contact Us on this Phone Number or Email address, or fill out a contact form in our Contact Us Page.</p>
             <div class="questions-contacts">
                 <span><i class="fa-solid fa-phone"></i>1234-567-8910</span>
-                <span><i class="fa-solid fa-envelope"></i>weronika.vik@gmail.com</span>
+                <span><i class="fa-solid fa-envelope"></i>vikweronika@gmail.com</span>
             </div>
         </div>
         <div class="footer-links">
