--- a/error.html
+++ b/error.html
@@ -14,6 +14,7 @@
     <script type="module" src="/js/index/slider.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="shortcut icon" href="/media/favicon/favicon-16x16.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kay+Pho+Du:wght@400;500;600;700&family=Kumbh+Sans:wght@100..900&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap" rel="stylesheet">
 
