--- a/listings/single-listing.html
+++ b/listings/single-listing.html
@@ -42,16 +42,36 @@
                     </label>
 
                     <div class="links2">
-                        <a href="../index.html">Home</a>
+                        <a href="../index.html"  class="active-link">Home</a>
                         <a href="/listings/all-listings.html">Listings</a>
                         <a href="/error.html">About us</a>
                         <a href="/error.html">Contact us</a>
+
+                        <div class="user-options2">
+
+                            <div class="login-options2">
+                                <a href="/auth/login.html" class="option-login2">Login</a>
+                                <a href="/auth/register.html" class="option-register2">REGISTER</a>
+                            </div>
+        
+                            <div class="user-profile2">
+                                <a href="/profile/profile.html">
+                                    <div class="avatar2">
+                                        <img src="/media/default-profile.jpg" alt="">
+                                    </div>
+                                    <div class="credit-amount2">
+                                        <p>$ 0 Credits</p>
+                                    </div>
+                                </a>
+                            </div>
+        
+                        </div>
                     </div>
 
                 </div>
 
                 <div class="links" id="navLinks">
-                    <a href="../index.html">Home</a>
+                    <a href="../index.html"  class="active-link">Home</a>
                     <div class="nav-dot"></div>
                     <a href="/listings/all-listings.html">Listings</a>
                     <div class="nav-dot"></div>
