--- a/listings/all-listings.html
+++ b/listings/all-listings.html
@@ -5,15 +5,14 @@
     <title>Homepage</title>
 
     <link rel="stylesheet" href="/css/listings/all-listings.css">
+    <link rel="stylesheet" href="/css/listings/all-listings-body-footer.css">
     <link rel="stylesheet" href="/css/head/nav.css">
-    <link rel="stylesheet" href="/css/footer2.css">
-    <link rel="stylesheet" href="/css/body2.css">
 
-    <script type="module" src="/js/auth/register.js" defer></script>
     <script type="module" src="/js/listings/all-listings.js" defer></script>
     <script type="module" src="/js/nav/account.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="shortcut icon" href="/media/favicon/favicon-16x16.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kay+Pho+Du:wght@400;500;600;700&family=Kumbh+Sans:wght@100..900&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap" rel="stylesheet">
 
@@ -43,9 +42,29 @@
 
                     <div class="links2">
                         <a href="../index.html">Home</a>
-                        <a href="/listings/all-listings.html" class="active-link">Listings</a>
+                        <a href="/listings/all-listings.html">Listings</a>
                         <a href="/error.html">About us</a>
                         <a href="/error.html">Contact us</a>
+
+                        <div class="user-options2">
+
+                            <div class="login-options2">
+                                <a href="/auth/login.html" class="option-login2">Login</a>
+                                <a href="/auth/register.html" class="option-register2">REGISTER</a>
+                            </div>
+        
+                            <div class="user-profile2">
+                                <a href="/profile/profile.html">
+                                    <div class="avatar2">
+                                        <img src="/media/default-profile.jpg" alt="">
+                                    </div>
+                                    <div class="credit-amount2">
+                                        <p>$ 0 Credits</p>
+                                    </div>
+                                </a>
+                            </div>
+        
+                        </div>
                     </div>
 
                 </div>
