--- a/listings/create-listing.html
+++ b/listings/create-listing.html
@@ -182,14 +182,14 @@
                 <a href="/error.html">Careers</a>
                 <a href="/error.html">FAQs</a>
             </div>
-            <div class="Services">
+            <div class="services">
                 <h4><a href="/error.html" class="footer-links-title">Services</a></h4>
                 <a href="/error.html">Buy</a>
                 <a href="/error.html">Sell</a>
                 <a href="/error.html">Credit</a>
                 <a href="/error.html">FAQs</a>    
             </div>
-            <div class="Contact">
+            <div class="contact">
                 <h4><a href="/error.html" class="footer-links-title">Contact</a></h4>
                 <a href="/error.html">Phone</a>
                 <a href="/error.html">Email</a>
