--- a/listings/update-listing.html
+++ b/listings/update-listing.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/body.css">
     <link rel="stylesheet" href="/css/listings/update-listing.css">
+    <link rel="stylesheet" href="/css/popup.css">
 
     <script type="module" src="/js/nav/account.js" defer></script>
     <script type="module" src="/js/listings/update-listing.js" defer></script>
@@ -41,7 +42,7 @@
                     </label>
 
                     <div class="links2">
-                        <a href="../index.html"  class="active-link">Home</a>
+                        <a href="../index.html">Home</a>
                         <a href="/listings/all-listings.html">Listings</a>
                         <a href="/error.html">About us</a>
                         <a href="/error.html">Contact us</a>
@@ -70,7 +71,7 @@
                 </div>
 
                 <div class="links" id="navLinks">
-                    <a href="../index.html"  class="active-link">Home</a>
+                    <a href="../index.html">Home</a>
                     <div class="nav-dot"></div>
                     <a href="/listings/all-listings.html">Listings</a>
                     <div class="nav-dot"></div>
@@ -196,14 +197,14 @@
                 <a href="/error.html">Careers</a>
                 <a href="/error.html">FAQs</a>
             </div>
-            <div class="Services">
+            <div class="services">
                 <h4><a href="/error.html" class="footer-links-title">Services</a></h4>
                 <a href="/error.html">Buy</a>
                 <a href="/error.html">Sell</a>
                 <a href="/error.html">Credit</a>
                 <a href="/error.html">FAQs</a>    
             </div>
-            <div class="Contact">
+            <div class="contact">
                 <h4><a href="/error.html" class="footer-links-title">Contact</a></h4>
                 <a href="/error.html">Phone</a>
                 <a href="/error.html">Email</a>
