single listing responsive

--- a/listings/single-listing.html
+++ b/listings/single-listing.html
@@ -131,7 +131,7 @@
           
                     <div class="product-meta">
                         <div class="place-bid-content">
-                            <input type="number" id="bidAmount" min="0" step="any" placeholder="Enter your bid amount">
+                            <input type="number" id="bidAmount" min="0" step="any" placeholder="Enter your bid...">
                             <button class="place-bid" id="placeBid">BID</button>
                         </div>
                         <p class="total-bids">Total Bids:</p>
