update&create responsive

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -166,7 +166,7 @@
         
                     <div class="user-listings-title">
                         <h2>My Listings</h2>
-                        <button id="makeListing" onclick="window.location.href='create-listing.html'" class="create-button"><i class="fa-solid fa-plus"></i>Create Listing</button>
+                        <button id="makeListing" onclick="window.location.href='/listings/create-listing.html'" class="create-button"><i class="fa-solid fa-plus"></i>Create Listing</button>
                     </div>
                     
                     <div class="all-users-listings">
