extra styling before going to bed

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <ul class="h-[80px] flex flex-row justify-between items-center">
                 <div class="h-[80px] w-[80px] flex justify-center items-center">
                     <a href="../index.html" class="no-underline">
-                        <img src="/media/logos/logo-dark.png" alt="Logo" class="h-[45px] w-[45px] object-contain">
+                        <img src="/media/logos/logo-dark.png" alt="Logo" class="h-[75px] w-[75px] object-contain">
                     </a>
                 </div>
 
@@ -79,11 +79,11 @@
 
                 <div class="nav-links flex-row gap-2.5 items-center h-[80px]" id="navLinks">
                     <a href="../index.html" class="font-serif text-darkGreyFont text-base p-1.5 rounded-lg border border-darkGreyFont hover:border-[1.5px] hover:transition-all hover:border-darkGreyFont hover:bg-darkGreyFont hover:bg-[url(/media/textures/grain-texture2.png)] hover:bg-repeat hover:bg-contain hover:bg-[length:100px] hover:text-lightFont">Home</a>
-                    <div class="w-2.5 h-2.5 bg-orange rounded-full"></div>
+                    <div class="w-2.5 h-2.5 bg-specialOrange rounded-full"></div>
                     <a href="/listings/all-listings.html" class="font-serif text-darkGreyFont text-base p-1.5 rounded-lg border border-transparent hover:transition-all hover:border-darkGreyFont hover:bg-darkGreyFont hover:bg-[url(/media/textures/grain-texture2.png)] hover:bg-repeat hover:bg-contain hover:bg-[length:100px] hover:text-lightFont">Listings</a>
-                    <div class="w-2.5 h-2.5 bg-orange rounded-full"></div>
+                    <div class="w-2.5 h-2.5 bg-specialOrange rounded-full"></div>
                     <a href="/error.html" class="font-serif text-darkGreyFont text-base p-1.5 rounded-lg border border-transparent hover:border-darkGreyFont hover:transition-all hover:bg-darkGreyFont hover:bg-[url(/media/textures/grain-texture2.png)] hover:bg-repeat hover:bg-contain hover:bg-[length:100px] hover:text-lightFont">About us</a>
-                    <div class="w-2.5 h-2.5 bg-orange rounded-full"></div>
+                    <div class="w-2.5 h-2.5 bg-specialOrange rounded-full"></div>
                     <a href="/error.html" class="font-serif text-darkGreyFont text-base p-1.5 rounded-lg border border-transparent hover:border-darkGreyFont hover:transition-all hover:bg-darkGreyFont hover:bg-[url(/media/textures/grain-texture2.png)] hover:bg-repeat hover:bg-contain hover:bg-[length:100px] hover:text-lightFont">Contact us</a>
                 </div>
 
@@ -100,7 +100,7 @@
                                 <p class="font-serif">$ 0 Credits</p>
                             </div>
                             <div class="avatar w-[40px] h-[40px] rounded-full border-[1.5px] border-solid border-lightFont">
-                                <img src="/media/default-profile.jpg" alt="" class="w-[40px] h-[40px] object-cover rounded-full">
+                                <img src="/media/default-profile.jpg" alt="" class="w-[40px] h-[40px] object-cover rounded-full rounded-full border-[1.5px] border-solid border-lightFont">
                             </div>                            
                         </a>
                     </div>
