--- a/listings/all-listings.html
+++ b/listings/all-listings.html
@@ -107,7 +107,7 @@
 
     <main class="min-h-screen mb-auto">
 
-        <div class="ml-[10%] mr-[10%] pt-[160px] lPaddingUp">
+        <div class="ml-[10%] mr-[10%] pt-[160px] lPaddingUp pb-[160px]">
 
             <section class="w-full flex flex-col">
 
@@ -123,8 +123,8 @@
 
                 <div class="tag-section flex flex-row justify-between mb-[40px] h-[30px] w-full">
                     <div class="popular-tags flex flex-row gap-[20px] w-full">
-                        <div class="tag h-full w-auto p-[5px] px-[7px] border-[1.5px] border-[#29272F] rounded-[15px] flex items-center justify-center text-[16px] hover:bg-[#D6650F] hover:text-[#F2F2F2] hover:border-[#D6650F] hover:cursor-pointer transition-all duration-200">
-                            <p class="font-serif h-full w-auto p-[5px] px-[7px] border-[1.5px] border-[#29272F] rounded-[15px] flex items-center justify-center text-[16px] hover:bg-[#D6650F] hover:text-[#F2F2F2] hover:border-[#D6650F] hover:cursor-pointer transition-all duration-200"></p>
+                        <div class="tag text-green h-[40px] w-auto p-[5px] px-[7px] border-[1.5px] border-darkGreyFont rounded-[15px] flex items-center justify-center text-[16px] hover:bg-specialOrange hover:text-lightFont hover:border-specialOrange hover:cursor-pointer transition-all duration-200">
+                            <p class="font-serif h-full w-auto p-[5px] px-[7px] border-[1.5px] border-darkGreyFont rounded-[15px] flex items-center justify-center text-[16px] hover:bg-specialOrange hover:text-lightFont hover:border-specialOrange hover:cursor-pointer transition-all duration-200"></p>
                         </div>
                     </div>
                     <div class="default-tags flex items-center justify-center h-[50px] w-[90px]">
@@ -132,13 +132,13 @@
                     </div>
                 </div>
 
-                <div class="all-listings">
+                <div class="all-listings flex flex-wrap items-start justify-between gap-[40px] w-full mt-[40px] mb-0 pb-0">
                 </div>
 
-                <div id="pagination-controls" class="pagination-controls">
-                    <button id="prevPage" class="prev-button">Previous</button>
-                    <div id="pageNumbers" class="page-numbers"></div>
-                    <button id="nextPage" class="next-button">Next</button>
+                <div id="pagination-controls" class="pagination-controls mt-[120px] w-full flex flex-row items-center justify-center gap-[40px]">
+                    <button id="prevPage" class="prev-button p-[5px] border-[1.5px] border-[#29272F] rounded-[5px] bg-[#EBEEE9] w-[80px] hover:bg-[#29272F] hover:text-[#F2F2F2] hover:cursor-pointer transition-all duration-200">Previous</button>
+                    <div id="pageNumbers" class="page-numbers flex flex-row gap-[10px]"></div>
+                    <button id="nextPage" class="next-button p-[5px] border-[1.5px] border-[#29272F] rounded-[5px] bg-[#EBEEE9] w-[80px] hover:bg-[#29272F] hover:text-[#F2F2F2] hover:cursor-pointer transition-all duration-200">Next</button>
                 </div>
 
             </section>
