--- a/listings/all-listings.html
+++ b/listings/all-listings.html
@@ -11,6 +11,7 @@
 -->
     <link rel="stylesheet" href="/src/css/head/nav.css">
     <link rel="stylesheet" href="/dist/style.css">
+    <link rel="stylesheet" href="/src/css/listings/all-listings.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.0/dist/tailwind.min.css" rel="stylesheet">
 
     <script type="module" src="/js/listings/all-listings.js" defer></script>
