--- a/listings/all-listings.html
+++ b/listings/all-listings.html
@@ -123,7 +123,7 @@
                 </div>
 
                 <div class="tag-section flex flex-row justify-between mb-[40px] h-[30px] w-full">
-                    <div class="popular-tags flex flex-row gap-[20px] w-full">
+                    <div class="popular-tags flex flex-row gap-[20px] w-full text-green">
                         <div class="tag text-green h-[40px] w-auto p-[5px] px-[7px] border-[1.5px] border-darkGreyFont rounded-[15px] flex items-center justify-center text-[16px] hover:bg-specialOrange hover:text-lightFont hover:border-specialOrange hover:cursor-pointer transition-all duration-200">
                             <p class="font-serif h-full w-auto p-[5px] px-[7px] border-[1.5px] border-darkGreyFont rounded-[15px] flex items-center justify-center text-[16px] hover:bg-specialOrange hover:text-lightFont hover:border-specialOrange hover:cursor-pointer transition-all duration-200"></p>
                         </div>
