--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <div class="top-section-border bg-[#29272F] bg-[url('/media/textures/grain-texture2.png')] bg-repeat bg-contain bg-[length:100px] rounded-[25px] h-full w-full flex flex-col lg:flex-row items-center justify-center p-[40px] relative">
                   
                   <div class="content-image absolute z-10 inset-0 w-full h-full rounded-[25px] opacity-50">
-                    <img src="/media/auction.jpeg" alt="Auction" class="w-full h-full object-cover rounded-[25px] blur-[10px]" />
+                    <img src="/media/auction.jpeg" alt="Auction Logo, a gavel about to hit a moneybag in a modern icon design, with the Company's name underneath" class="w-full h-full object-cover rounded-[25px] blur-[10px]" />
                   </div>
                   
                   <div class="top-border-content w-full h-full relative flex flex-col lg:flex-row justify-between lg:w-[100%]">
