--- a/listings/all-listings.html
+++ b/listings/all-listings.html
@@ -114,7 +114,7 @@
 
                 <div class="flex flex-row w-full justify-between mb-10">
                     <h1 class="text-[45px] pt-0 mt-0 text-darkGreyFont">All Listings</h1>
-                    <div class="sort-by-option h-[50px] w-[80px] flex items-center justify-center border-[1.5px] border-[#29272F] rounded-[10px]">
+                    <div class="sort-by-option h-[50px] w-[80px] flex items-center justify-center border-[1.5px] border-[#29272F] rounded-[10px] cursor-pointer">
                         <select id="sort-by" class="sort-by bg-transparent border-0 font-serif h-[50px] w-[80px]">
                           <option value="newest font-serif">Newest</option>
                           <option value="oldest font-serif">Oldest</option>
@@ -124,8 +124,8 @@
 
                 <div class="tag-section flex flex-row justify-between mb-[40px] h-[30px] w-full">
                     <div class="popular-tags flex flex-row gap-[20px] w-full text-green">
-                        <div class="tag text-green h-[40px] w-auto p-[5px] px-[7px] border-[1.5px] border-darkGreyFont rounded-[15px] flex items-center justify-center text-[16px] hover:bg-specialOrange hover:text-lightFont hover:border-specialOrange hover:cursor-pointer transition-all duration-200">
-                            <p class="font-serif h-full w-auto p-[5px] px-[7px] border-[1.5px] border-darkGreyFont rounded-[15px] flex items-center justify-center text-[16px] hover:bg-specialOrange hover:text-lightFont hover:border-specialOrange hover:cursor-pointer transition-all duration-200"></p>
+                        <div class="tag h-[40px] w-auto p-[5px] px-[7px] border-[1.5px] border-darkGreyFont rounded-[15px] flex items-center justify-center text-[16px] hover:bg-specialOrange hover:text-lightFont hover:border-specialOrange hover:cursor-pointer transition-all duration-200">
+                            <p class="font-serif"></p>
                         </div>
                     </div>
                     <div class="default-tags flex items-center justify-center h-[50px] w-[90px]">
