--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                       </form>
                     </div>
               
-                    <button type="submit" class="bg-[#D6650F] mt-4 w-[100%] lg:w-[45%] h-[50px] lg:h-[74px] border-0 rounded-[0px_25px_25px_25px] text-md lg:text-[18px] font-semibold text-[#29272F] hover:transition-all hover:duration-200 hover:ml-[15%] hover:bg-[#81AB76] hover:text-[#F2F2F2] cursor-pointer mx-auto">
+                    <button type="submit" class="bg-[#D6650F] mt-4 w-[100%] lg:w-[45%] h-[50px] lg:h-[74px] border-0 rounded-[0px_25px_25px_25px] text-md lg:text-[18px] font-semibold text-[#29272F] hover:transition-all hover:duration-200 hover:ml-[15%] hover:bg-[#81AB76] hover:text-[#F2F2F2] cursor-pointer mx-auto lg:hover:ml-[15%] lg:hover:bg-[#81AB76] lg:hover:text-[#F2F2F2]">
                       REGISTER
                     </button>
                   </div>
