some extra codes

--- a/listings/single-listing.html
+++ b/listings/single-listing.html
@@ -126,10 +126,6 @@
                         </a>
                     </div>
                     <h1 class="text-[35px] mb-[40px]"></h1>
-                <div class="listings-tags mb-[40px] flex flex-row gap-[20px] w-full">
-                   <div id="tags" class="tags h-[30px] w-auto p-[5px] pl-[7px] pr-[7px] border-[1.5px] border-[#29272F] rounded-[15px] flex items-center justify-center">
-                   </div>
-                </div>
           
                 <div class="listing-content">
                   <div class="middle-content">
@@ -137,7 +133,7 @@
           
                     <div class="product-meta flex flex-col gap-[20px]">
                         <div class="place-bid-content">
-                            <input type="number" id="bidAmount" min="0" step="any" placeholder="Enter your bid..." class="border border-[#29272F] rounded-[10px] h-[35px] bg-transparent placeholder-[#29272F]">
+                            <input type="number" id="bidAmount" min="0" step="any" placeholder="Enter your bid..." class="border border-[#29272F] rounded-[10px] h-[35px] bg-transparent placeholder-[#29272F] placeholder:opacity-75 placeholder:pl-[5px] placeholder:font-serif">
                             <button class="place-bid font-serif bg-[#D6650F] text-[#F2F2F2] h-[35px] w-[55px] ml-[10px] border-0 rounded-[10px] font-serif hover:bg-[#81AB76] hover:cursor-pointer transition-all duration-200" id="placeBid">
                                 BID
                             </button>                              
