--- a/profile/profile.html
+++ b/profile/profile.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="/css/popup.css">
     -->
 
-    <link rel="stylesheet" href="/src/css/head/nav.css">    
+    <link rel="stylesheet" href="/src/css/head/nav.css">  
+    <link rel="stylesheet" href="/src/css/profile/profile-info.css">  
     <link rel="stylesheet" href="/dist/style.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.0/dist/tailwind.min.css" rel="stylesheet">
 
@@ -120,9 +121,9 @@
             </div>
         </div>
 
-        <div class="ml-[10%] mr-[10%] pt-[160px] lPaddingUp flex flex-row justify-between">
+        <div class="font-serif ml-[10%] mr-[10%] pt-[160px] lPaddingUp flex flex-row justify-between">
 
-            <section class="profile-info-section font-serif sticky bg-[#29272F] bg-[url('/media/textures/grain-texture2.png')] bg-repeat bg-contain bg-[100px] h-[75vh] w-[300px] rounded-[15px] text-[#F2F2F2]">
+            <section class="profile-info-section sticky bg-[#29272F] bg-[url('/media/textures/grain-texture2.png')] bg-repeat bg-contain bg-[100px] h-[75vh] w-[300px] rounded-[15px] text-[#F2F2F2]">
                 <h1>
                     <div id="username"></div>
                 </h1>
@@ -173,7 +174,7 @@
                     </div>
                     
                     <div class="all-users-listings mt-[40px]">
-                        <div id="user-listings" class="listings flex flex-row flex-start space-between w-[100%]">
+                        <div id="user-listings" class="listings flex flex-wrap items-start justify-between w-full">
                             <p></p>
                         </div>
                     </div>
