nice work, said no one

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -171,7 +171,7 @@
         
                     <div class="user-listings-title flex flex-row justify-between items-center h-[80px]">
                         <h2 class="text-[35px] flex items-center justify-center">My Listings</h2>
-                        <button id="makeListing" onclick="window.location.href='create-listing.html'" class="create-button h-[40px] w-[160px] bg-[#81AB76] rounded-[10px] border-0 text-[#F2F2F2] text-[18px] hover:cursor-pointer hover:bg-specialOrange transition-all duration-200">Create Listing</button>
+                        <button id="makeListing" onclick="window.location.href='/listings/create-listing.html'" class="create-button h-[40px] w-[160px] bg-[#81AB76] rounded-[10px] border-0 text-[#F2F2F2] text-[18px] hover:cursor-pointer hover:bg-specialOrange transition-all duration-200">Create Listing</button>
                     </div>
                     
                     <div class="all-users-listings mt-[40px]">
