--- a/index.html
+++ b/index.html
@@ -31,82 +31,82 @@
 
 <body class="bg-bodyBackground p-0 m-0 h-full overflow-x-hidden font-serif">
 
-    <header class="bg-bodyBackground h-[80px] w-full fixed top-0 z-[999] border-b-[1.5px] border-darkGreyFont">
-        <nav class="ml-[10%] mr-[10%] h-[80px]">
-            <ul class="h-[80px] flex flex-row justify-between items-center">
-                <div class="h-[80px] w-[80px] flex justify-center items-center">
-                    <a href="../index.html" class="no-underline">
-                        <img src="/media/logos/logo-dark.png" alt="Logo" class="h-[75px] w-[75px] object-contain">
-                    </a>
-                </div>
+  <header class="bg-bodyBackground h-[80px] w-full fixed top-0 z-[999] border-b-[1.5px] border-darkGreyFont">
+    <nav class="ml-[10%] mr-[10%] h-[80px]">
+        <ul class="h-[80px] flex flex-row justify-between items-center">
+            <div class="h-[80px] w-[80px] flex justify-center items-center">
+                <a href="../index.html" class="no-underline">
+                    <img src="/media/logos/logo-dark.png" alt="Logo" class="h-[75px] w-[75px] object-contain">
+                </a>
+            </div>
+
+            <!-- Responsive Menu -->
+            <div class="responsive-menu mr-[10%]">
+                <input type="checkbox" id="menuToggle" class="opacity-0 menu-toggle">
+                <label for="menuToggle" class="absolute top-0 left-0 flex flex-col gap-1 cursor-pointer z-[999]">
+                    <div class="w-8 h-1.5 bg-[#29272F] rounded-full"></div>
+                    <div class="w-8 h-1.5 bg-[#29272F] rounded-full"></div>
+                    <div class="w-8 h-1.5 bg-[#29272F] rounded-full"></div>
+                </label>
+
+                <div class="links2">
+                    <a href="../index.html" class="text-darkGreyFont text-base p-1.5 font-serif">Home</a>
+                    <a href="/listings/all-listings.html" class="text-darkGreyFont text-base p-1.5 font-serif">Listings</a>
+                    <a href="/error.html" class="text-darkGreyFont text-base p-1.5 font-serif">About us</a>
+                    <a href="/error.html" class="text-darkGreyFont text-base p-1.5 font-serif">Contact us</a>                        
+
+                    <div class="user-options2">
+
+                        <div class="login-options2">
+                            <a href="/auth/login.html" class="option-login2 font-serif">Login</a>
+                            <a href="/auth/register.html" class="option-register2 font-serif">REGISTER</a>
+                        </div>
     
-                <!-- Responsive Menu -->
-                <div class="responsive-menu mr-[10%]">
-                    <input type="checkbox" id="menuToggle" class="opacity-0 menu-toggle">
-                    <label for="menuToggle" class="absolute top-0 left-0 flex flex-col gap-1 cursor-pointer z-[999]">
-                        <div class="w-8 h-1.5 bg-[#29272F] rounded-full"></div>
-                        <div class="w-8 h-1.5 bg-[#29272F] rounded-full"></div>
-                        <div class="w-8 h-1.5 bg-[#29272F] rounded-full"></div>
-                    </label>
-
-                    <div class="links2">
-                        <a href="../index.html" class="text-darkGreyFont text-base p-1.5 font-serif">Home</a>
-                        <a href="/listings/all-listings.html" class="text-darkGreyFont text-base p-1.5 font-serif">Listings</a>
-                        <a href="/error.html" class="text-darkGreyFont text-base p-1.5 font-serif">About us</a>
-                        <a href="/error.html" class="text-darkGreyFont text-base p-1.5 font-serif">Contact us</a>                        
-
-                        <div class="user-options2">
-
-                            <div class="login-options2">
-                                <a href="/auth/login.html" class="option-login2 font-serif">Login</a>
-                                <a href="/auth/register.html" class="option-register2 font-serif">REGISTER</a>
-                            </div>
-        
-                            <div class="user-profile2 flex h-[60px]">
-                                <a href="/profile/profile.html" class="flex flex-row items-center bg-bodyBackground bg-[url('/media/textures/grain-texture2.png')] bg-repeat bg-contain px-2 py-1 rounded-2xl text-lightFont hover:bg-orange hover:bg-[none] hover:text-lightFont transition-all">
-                                    <div class="credit-amount2 flex justify-center items-center mr-2 text-sm">
-                                        <p class="text-lightFont font-serif">$ 0 Credits</p>
-                                    </div>
-                                    <div class="avatar2 w-[40px] h-[40px] rounded-full border-[1.5px] border-solid border-lightFont">
-                                        <img src="/media/default-profile.jpg" alt="" class="w-[40px] h-[40px] object-cover rounded-full">
-                                    </div>                            
-                                </a>
-                            </div>
+                        <div class="user-profile2 flex h-[60px]">
+                            <a href="/profile/profile.html" class="flex flex-row items-center bg-bodyBackground bg-[url('/media/textures/grain-texture2.png')] bg-repeat bg-contain px-2 py-1 rounded-2xl text-lightFont hover:bg-orange hover:bg-[none] hover:text-lightFont transition-all">
+                                <div class="credit-amount2 flex justify-center items-center mr-2 text-sm">
+                                    <p class="text-lightFont font-serif">$ 0 Credits</p>
+                                </div>
+                                <div class="avatar2 w-[40px] h-[40px] rounded-full border-[1.5px] border-solid border-lightFont">
+                                    <img src="/media/default-profile.jpg" alt="" class="w-[40px] h-[40px] object-cover rounded-full">
+                                </div>                            
+                            </a>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="nav-links flex-row gap-2.5 items-center h-[80px]" id="navLinks">
-                    <a href="../index.html" class="font-serif text-darkGreyFont text-base p-1.5 rounded-lg border border-darkGreyFont hover:border-[1.5px] hover:transition-all hover:border-darkGreyFont hover:bg-darkGreyFont hover:bg-[url(/media/textures/grain-texture2.png)] hover:bg-repeat hover:bg-contain hover:bg-[length:100px] hover:text-lightFont">Home</a>
-                    <div class="w-2.5 h-2.5 bg-specialOrange rounded-full"></div>
-                    <a href="/listings/all-listings.html" class="font-serif text-darkGreyFont text-base p-1.5 rounded-lg border border-transparent hover:transition-all hover:border-darkGreyFont hover:bg-darkGreyFont hover:bg-[url(/media/textures/grain-texture2.png)] hover:bg-repeat hover:bg-contain hover:bg-[length:100px] hover:text-lightFont">Listings</a>
-                    <div class="w-2.5 h-2.5 bg-specialOrange rounded-full"></div>
-                    <a href="/error.html" class="font-serif text-darkGreyFont text-base p-1.5 rounded-lg border border-transparent hover:border-darkGreyFont hover:transition-all hover:bg-darkGreyFont hover:bg-[url(/media/textures/grain-texture2.png)] hover:bg-repeat hover:bg-contain hover:bg-[length:100px] hover:text-lightFont">About us</a>
-                    <div class="w-2.5 h-2.5 bg-specialOrange rounded-full"></div>
-                    <a href="/error.html" class="font-serif text-darkGreyFont text-base p-1.5 rounded-lg border border-transparent hover:border-darkGreyFont hover:transition-all hover:bg-darkGreyFont hover:bg-[url(/media/textures/grain-texture2.png)] hover:bg-repeat hover:bg-contain hover:bg-[length:100px] hover:text-lightFont">Contact us</a>
+            <div class="nav-links flex-row gap-2.5 items-center h-[80px]" id="navLinks">
+                <a href="../index.html" class="font-serif text-darkGreyFont text-base p-1.5 rounded-lg border border-darkGreyFont hover:border-[1.5px] hover:transition-all hover:border-darkGreyFont hover:bg-darkGreyFont hover:bg-[url(/media/textures/grain-texture2.png)] hover:bg-repeat hover:bg-contain hover:bg-[length:100px] hover:text-lightFont">Home</a>
+                <div class="w-2.5 h-2.5 bg-specialOrange rounded-full"></div>
+                <a href="/listings/all-listings.html" class="font-serif text-darkGreyFont text-base p-1.5 rounded-lg border border-transparent hover:transition-all hover:border-darkGreyFont hover:bg-darkGreyFont hover:bg-[url(/media/textures/grain-texture2.png)] hover:bg-repeat hover:bg-contain hover:bg-[length:100px] hover:text-lightFont">Listings</a>
+                <div class="w-2.5 h-2.5 bg-specialOrange rounded-full"></div>
+                <a href="/error.html" class="font-serif text-darkGreyFont text-base p-1.5 rounded-lg border border-transparent hover:border-darkGreyFont hover:transition-all hover:bg-darkGreyFont hover:bg-[url(/media/textures/grain-texture2.png)] hover:bg-repeat hover:bg-contain hover:bg-[length:100px] hover:text-lightFont">About us</a>
+                <div class="w-2.5 h-2.5 bg-specialOrange rounded-full"></div>
+                <a href="/error.html" class="font-serif text-darkGreyFont text-base p-1.5 rounded-lg border border-transparent hover:border-darkGreyFont hover:transition-all hover:bg-darkGreyFont hover:bg-[url(/media/textures/grain-texture2.png)] hover:bg-repeat hover:bg-contain hover:bg-[length:100px] hover:text-lightFont">Contact us</a>
+            </div>
+
+            <div class="user-options h-[100px] items-center">
+
+                <div class="login-options flex flex-row items-center gap-5">
+                    <a href="/auth/login.html" class="option-login border border-darkGreyFont rounded-lg px-2 py-1 text-darkGreyFont bg-bodyBackground hover:transition-all hover:bg-[#81AB76] hover:text-lightFont  hover:border-[#81AB76] transition-all">Login</a>
+                    <a href="/auth/register.html" class="option-register border border-lightFont rounded-lg px-4 py-2 text-lightFont hover:transition-all bg-darkGreyFont hover:bg-specialOrange hover:border-specialOrange transition-all">REGISTER</a>
                 </div>
 
-                <div class="user-options h-[100px] items-center">
-
-                    <div class="login-options hidden flex flex-row items-center gap-5">
-                        <a href="/auth/login.html" class="option-login border border-bodyBackground rounded-lg px-2 py-1 text-bodyBackground hover:transition-all hover:bg-green hover:text-lightFont hover:border-green transition-all">Login</a>
-                        <a href="/auth/register.html" class="option-register border border-lightFont rounded-lg px-4 py-2 text-lightFont hover:transition-all bg-bodyBackground bg-[url('/media/textures/grain-texture2.png')] bg-repeat bg-contain hover:bg-orange hover:border-orange transition-all">REGISTER</a>
-                    </div>
-
-                    <div class="user-profile flex h-[60px]">
-                        <a href="/profile/profile.html" class="flex flex-row items-center bg-bodyBackground bg-[url('/media/textures/grain-texture2.png')] bg-repeat bg-contain px-2 py-1 rounded-2xl text-lightFont hover:bg-orange hover:bg-[none] hover:text-lightFont transition-all">
-                            <div class="credit-amount font-serif flex justify-center items-center mr-2 text-sm">
-                                <p class="font-serif">$ 0 Credits</p>
-                            </div>
-                            <div class="avatar w-[40px] h-[40px] rounded-full border-[1.5px] border-solid border-lightFont">
-                                <img src="/media/default-profile.jpg" alt="" class="w-[40px] h-[40px] object-cover rounded-full rounded-full border-[1.5px] border-solid border-lightFont">
-                            </div>                            
-                        </a>
-                    </div>
+                <div class="user-profile h-[60px]">
+                    <a href="/profile/profile.html" class="flex flex-row items-center bg-bodyBackground bg-[url('/media/textures/grain-texture2.png')] bg-repeat bg-contain px-2 py-1 rounded-2xl text-lightFont hover:bg-orange hover:bg-[none] hover:text-lightFont transition-all">
+                        <div class="credit-amount font-serif flex justify-center items-center mr-2 text-sm">
+                            <p class="font-serif">$ 0 Credits</p>
+                        </div>
+                        <div class="avatar w-[40px] h-[40px] rounded-full border-[1.5px] border-solid border-lightFont">
+                            <img src="/media/default-profile.jpg" alt="" class="w-[40px] h-[40px] object-cover rounded-full rounded-full border-[1.5px] border-solid border-lightFont">
+                        </div>                            
+                    </a>
                 </div>
-            </ul>
-        </nav>
-    </header>
+            </div>
+        </ul>
+    </nav>
+</header>
 
     <main class="min-h-screen mb-auto">
         <div class="ml-[10%] mr-[10%] pt-[160px] lPaddingUp">
