fixed header issue

--- a/auth/login.html
+++ b/auth/login.html
@@ -52,9 +52,9 @@
                         <a href="/error.html" class="text-darkGreyFont text-base p-1.5 font-serif">About us</a>
                         <a href="/error.html" class="text-darkGreyFont text-base p-1.5 font-serif">Contact us</a>                        
 
-                        <div class="user-options2 h-[100px] items-center">
+                        <div class="user-options2 h-[100px] items-center w-[80%]">
 
-                            <div class="login-options2 flex flex-row items-center gap-5">
+                            <div class="login-options2 flex flex-row items-center gap-2">
                                 <a href="/auth/login.html" class="option-login2 border border-darkGreyFont rounded-lg px-2 py-1 text-darkGreyFont bg-bodyBackground hover:transition-all hover:bg-[#81AB76] hover:text-lightFont  hover:border-[#81AB76] transition-all">Login</a>
                                 <a href="/auth/register.html" class="option-register2 border border-lightFont rounded-lg px-4 py-2 text-lightFont hover:transition-all bg-darkGreyFont hover:bg-specialOrange hover:border-specialOrange transition-all">REGISTER</a>
                             </div>
