--- a/auth/register.html
+++ b/auth/register.html
@@ -39,10 +39,10 @@
                 <!-- Responsive Menu -->
                 <div class="responsive-menu mr-[10%]">
                     <input type="checkbox" id="menuToggle" class="opacity-0 menu-toggle">
-                    <label for="menuToggle" class="absolute top-0 left-0 flex flex-col gap-1 cursor-pointer z-[999]">
-                        <div class="w-8 h-1.5 bg-[#29272F] rounded-full"></div>
-                        <div class="w-8 h-1.5 bg-[#29272F] rounded-full"></div>
-                        <div class="w-8 h-1.5 bg-[#29272F] rounded-full"></div>
+                    <label for="menuToggle" class="hamburger-menu">
+                        <div class="hamburger-line"></div>
+                        <div class="hamburger-line"></div>
+                        <div class="hamburger-line"></div>
                     </label>
 
                     <div class="links2">
@@ -51,20 +51,20 @@
                         <a href="/error.html" class="text-darkGreyFont text-base p-1.5 font-serif">About us</a>
                         <a href="/error.html" class="text-darkGreyFont text-base p-1.5 font-serif">Contact us</a>                        
 
-                        <div class="user-options2">
+                        <div class="user-options2 h-[100px] items-center w-[80%]">
 
-                            <div class="login-options2">
-                                <a href="/auth/login.html" class="option-login2 font-serif">Login</a>
-                                <a href="/auth/register.html" class="option-register2 font-serif">REGISTER</a>
+                            <div class="login-options2 flex flex-row items-center gap-2">
+                                <a href="/auth/login.html" class="option-login2 border border-darkGreyFont rounded-lg px-2 py-1 text-darkGreyFont bg-bodyBackground hover:transition-all hover:bg-[#81AB76] hover:text-lightFont  hover:border-[#81AB76] transition-all">Login</a>
+                                <a href="/auth/register.html" class="option-register2 border border-lightFont rounded-lg px-4 py-2 text-lightFont hover:transition-all bg-darkGreyFont hover:bg-specialOrange hover:border-specialOrange transition-all">REGISTER</a>
                             </div>
         
-                            <div class="user-profile2 flex h-[60px]">
+                            <div class="user-profile2 h-[60px]">
                                 <a href="/profile/profile.html" class="flex flex-row items-center bg-bodyBackground bg-[url('/media/textures/grain-texture2.png')] bg-repeat bg-contain px-2 py-1 rounded-2xl text-lightFont hover:bg-orange hover:bg-[none] hover:text-lightFont transition-all">
-                                    <div class="credit-amount2 flex justify-center items-center mr-2 text-sm">
-                                        <p class="text-lightFont font-serif">$ 0 Credits</p>
+                                    <div class="credit-amount2 font-serif flex justify-center items-center mr-2 text-sm">
+                                        <p class="font-serif">$ 0 Credits</p>
                                     </div>
                                     <div class="avatar2 w-[40px] h-[40px] rounded-full border-[1.5px] border-solid border-lightFont">
-                                        <img src="/media/default-profile.jpg" alt="" class="w-[40px] h-[40px] object-cover rounded-full">
+                                        <img src="/media/default-profile.jpg" alt="" class="w-[40px] h-[40px] object-cover rounded-full rounded-full border-[1.5px] border-solid border-lightFont">
                                     </div>                            
                                 </a>
                             </div>
